# PixouSimulator

./: CMakeLists.txt  README.md  main.cpp
header/: Cell.hpp  Coin.h  Coin.hpp  Game.hpp  Pixou.h  Pixou.hpp  Position.h  Position.hpp  Reward.h  Reward.hpp  Star.h  Star.hpp  State.hpp
src/: Cell.cpp  Coin.cpp  Game.cpp  Pixou.cpp  Position.cpp  Reward.cpp  Star.cpp  State.cpp
